theme(styles): fixes to dark mode

--- a/assets/scss/settings/_theme.scss
+++ b/assets/scss/settings/_theme.scss
@@ -5,19 +5,6 @@ $container-max-widths: (
   lg: 960px,
 );
 
-// colors
-$primary: rgb(192, 57, 43);
-$theme-colors: (
-  'primary': $primary,
-  'secondary': $secondary,
-  'success': $success,
-  'info': $info,
-  'warning': $warning,
-  'danger': $danger,
-  'light': $light,
-  'dark': $dark,
-);
-
 // typography
 $font-family-sans-serif: Tomkin, system-ui, -apple-system, 'Segoe UI', Roboto,
   'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif,
